nginx.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-app
  namespace: kamal
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-app
        image: 811847782524.dkr.ecr.ap-southeast-1.amazonaws.com/nginx:latest
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: kamal
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
