tomcat.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tomcat-app
  namespace: kamal
  labels:
    app: tomcat
spec:
  selector:
    matchLabels:
      app: tomcat
  replicas: 2
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat-app
        image: 811847782524.dkr.ecr.ap-southeast-1.amazonaws.com/ubuntu:latest
        ports:
        - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service
  namespace: kamal
spec:
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
